# Universal-DataBase

./: Documentation.md  README.md  pyproject.toml
tests/: test_universal_database.py
universal_database/: __init__.py
